# Candle-ProstT5

./: .gitignore  Cargo.toml  download_model.sh
c/: Makefile  prostt5.h
c/stub/rayon/src/: lib.rs
src/: cnn.rs  ffi.rs  lib.rs  main.rs
stub/.cargo/: config.toml
stub/num_cpus/src/: lib.rs
stub/rayon/: Cargo.toml
stub/rayon/src/: lib.rs
