[package]
name = "test_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
candle-core = {git = "https://github.com/huggingface/candle.git", package = "candle-core"}
candle-nn = {git = "https://github.com/huggingface/candle.git", package = "candle-nn"}
candle-transformers = {git = "https://github.com/huggingface/candle.git", package = "candle-transformers"}
pico-args = "=0.5.0"
#cudarc = { version = "0.10.0", features = ["f16"] }
serde_json = "1.0.115"
tracing-chrome = { version = "0.7.2", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[features]
tracing = ["tracing-chrome", "tracing-subscriber"]

[patch.crates-io]
fancy-regex = { path = "stub" }

[profile.release-with-debug]
inherits = "release"
debug = true